# cenfotec-gestion-academica

./: .env.example  Makefile  README.md
backend/: .env.example  Dockerfile  README.md  _backfill_comments.py  _backfill_escuelas.py  _backfill_modalidad.py  _reanalyze_comments.py  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  rate_limit.py
backend/app/core/: __init__.py  cache.py  config.py  logging.py
backend/app/domain/: __init__.py  alert_rules.py  exceptions.py  fingerprint.py  invariants.py  periodo.py
backend/app/modules/: __init__.py
backend/app/shared/: README.md
backend/scripts/: README.md  backfill_comments.py  backfill_dimensions.py  backfill_escuelas.py  backfill_modalidad.py  reanalyze_comments.py
backend/tests/: conftest.py
backend/tests/api/: test_alertas.py  test_analytics.py  test_auth.py  test_documentos.py  test_evaluaciones.py  test_health.py  test_modalidad_enforcement.py  test_modalidad_isolation.py  test_qualitative.py  test_query.py  test_security.py  test_upload.py
backend/tests/fixtures/: factories.py  fakes.py
backend/tests/integration/: test_alerta_repo.py  test_analytics_repo.py  test_documento_repo.py  test_duplicate_detection.py  test_evaluacion_repo.py  test_processing_service.py  test_qualitative_repo.py  test_query_service.py
backend/tests/unit/: test_alert_engine.py  test_alert_engine_edge_cases.py  test_alert_rules.py  test_api_health.py  test_auth_service.py  test_authorization_service.py  test_business_rules.py  test_cache.py  test_classifier.py  test_comments_extractor.py  (+23 more)
(+374 files in other folders)
